force-app/main/default/objects/Site_Visit__c/fields/Active_CP__c.field-meta.xml
<CustomField>
    <fullName>Active_CP__c</fullName>
    <formula>Related_Source__r.Active_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active CP</label>
    <type>Checkbox</type>
</CustomField>