force-app/main/default/objects/Site_Visit__c/fields/Channel_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Id__c</fullName>
    <formula>Related_Source__r.Channel_Partner1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner(Id)</label>
    <type>Text</type>
</CustomField>