force-app/main/default/objects/Site_Visit__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <formula>Related_Source__r.Channel_Partner1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Name</label>
    <type>Text</type>
</CustomField>