force-app/main/default/objects/Site_Visit__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Related_Source__c,
    Related_Source__r.Name__c,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>