force-app/main/default/objects/Site_Visit__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <formula>Related_Source__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>