force-app/main/default/objects/Site_Visit__c/fields/Email_sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_Time__c</fullName>
    <label>Email sent Time</label>
    <type>DateTime</type>
</CustomField>