force-app/main/default/objects/Site_Visit__c/fields/Enquiry_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Related_Source__r.Id, Related_Source__r.Name__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Name</label>
    <type>Text</type>
</CustomField>