force-app/main/default/objects/Site_Visit__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>Related_Source__r.SLead__r.FirstName +&apos; &apos;+   Related_Source__r.SLead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>