force-app/main/default/objects/Site_Visit__c/fields/OTP_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>OTP_Generated_Date__c</fullName>
    <description>Timestamp when the current OTP on this Site Visit was generated. Used to enforce a 30-day OTP validity window.</description>
    <inlineHelpText>Date/time when this OTP was issued. OTP stays valid for 30 days from this timestamp.</inlineHelpText>
    <label>OTP Generated Date</label>
    <type>DateTime</type>
</CustomField>