force-app/main/default/objects/Site_Visit__c/fields/OTP_Sent__c.field-meta.xml
<CustomField>
    <fullName>OTP_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTP Sent</label>
    <type>Checkbox</type>
</CustomField>