force-app/main/default/objects/Site_Visit__c/fields/Pre_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_User__c</fullName>
    <formula>Related_Source__r.Pre_Sales_User__r.FirstName +&apos; &apos;+ Related_Source__r.Pre_Sales_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Sales User</label>
    <type>Text</type>
</CustomField>