force-app/main/default/objects/Site_Visit__c/fields/Related_to_customer_name__c.field-meta.xml
<CustomField>
    <fullName>Related_to_customer_name__c</fullName>
    <formula>Related_Source__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to customer name</label>
    <type>Text</type>
</CustomField>