force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Completed__c</fullName>
    <formula>ISPICKVAL(Status__c,&apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Completed</label>
    <type>Checkbox</type>
</CustomField>