force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Remarks__c</fullName>
    <label>Site Visit Remarks</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>