force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Scheduled__c</fullName>
    <formula>OR(
				ISPICKVAL(Status__c, &apos;Scheduled&apos;),
ISPICKVAL(Status__c, &apos;Rescheduled&apos;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Scheduled</label>
    <type>Checkbox</type>
</CustomField>