force-app/main/default/objects/Site_Visit__c/fields/Source1__c.field-meta.xml
<CustomField>
    <fullName>Source1__c</fullName>
    <formula>text( Related_Source__r.Source_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>