force-app/main/default/objects/Site_Visit__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>NUSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>