force-app/main/default/objects/Site_Visit__c/fields/SV_Date__c.field-meta.xml
<CustomField>
    <fullName>SV_Date__c</fullName>
    <formula>TEXT(DATEVALUE(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SV Date</label>
    <type>Text</type>
</CustomField>