force-app/main/default/objects/Site_Visit__c/fields/SV_Time__c.field-meta.xml
<CustomField>
    <fullName>SV_Time__c</fullName>
    <formula>TEXT(TIMEVALUE(Date__c + (5.5/24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SV Time</label>
    <type>Text</type>
</CustomField>