force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source1__c</columns>
    <columns>Status__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>