force-app/main/default/objects/Site_Visit__c/listViews/Pending_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Pending_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Source1__c</columns>
    <columns>Date__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>Createddate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Pending Site Visits</label>
</ListView>