force-app/main/default/objects/Site_Visit__c/listViews/This_Month_s_Site_Visits.listView-meta.xml
<ListView>
    <fullName>This_Month_s_Site_Visits</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Source1__c</columns>
    <columns>Site_Visit_rating__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>This Month&apos;s Site Visits</label>
</ListView>