force-app/main/default/objects/Site_Visit__c/listViews/Zuari_Gangothri_Tribhuja.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source1__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <label>Zuari Gangothri Tribhuja</label>
</ListView>