force-app/main/default/objects/Site_Visit__c/listViews/Zuari_Garden_City_Plots.listView-meta.xml
<ListView>
    <fullName>Zuari_Garden_City_Plots</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source1__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Zuari Garden City</value>
    </filters>
    <label>Zuari Garden City - Plots</label>
</ListView>